<resources>
    <string name="app_name">ODLib-AndroidDemo</string>
    <string name="action_settings">Settings</string>
    <string name="service">Service</string>
    <string name="service_on">Service On</string>
    <string name="service_off">Service Off</string>
    <string name="server_off">Server Off</string>
    <string name="server_on">Server On</string>
    <string name="advertise_off">Advertise Off</string>
    <string name="advertise_on">Advertise On</string>
    <string name="discover_off">Discover Off</string>
    <string name="discover_on">Discover On</string>
    <string name="download">Download</string>
    <string name="chooseImage">Choose Image</string>
    <string name="loadModel">Load Model</string>
    <string name="selectModel">Select Model</string>
    <string name="selectScheduler">Select Scheduler</string>
    <string name="takePhoto">Take Photo</string>
    <string name="sequential">Sequential</string>
    <string name="parallel">Parallel</string>
    <string name="changeCloud">Change Cloud</string>
    <string name="SmallAssets">Small Asssets</string>
    <string name="LargeAssets">Large Assets</string>
    <string name="scheduler_service_on">Scheduler On</string>
    <string name="scheduler_service_off">Scheduler Off</string>
    <string name="worker_service_off">Worker Off</string>
    <string name="worker_service_on">Worker On</string>
    <string name="show_models">Show Models</string>
    <string name="show_schedulers">Show Schedulers</string>
    <string name="computeTime">Compute Time</string>
    <string name="runnningJobs">Running Jobs</string>
    <string name="queueSize">Queue Size</string>
    <string name="battery">Battery</string>
    <string name="bandwidth">Bandwidth</string>
</resources>
