<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivityFragment">

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/consoleFont"
            android:background="@color/consoleBackground"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/loggingConsole" android:padding="10dp"
            android:scrollbars="vertical"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serviceToggleButton"
                    android:layout_weight="1"
                    android:onClick="serviceToggleListener"
                    android:textOff="@string/service_off"
                    android:textOn="@string/service_on"/>

            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serverToggleButton"
                    android:layout_weight="1"
                    android:onClick="serverToggleListener"
                    android:textOff="@string/server_off"
                    android:textOn="@string/server_on"/>
            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/discoverToggleButton"
                    android:layout_weight="1"
                    android:onClick="discoverToggleListener"
                    android:textOff="@string/discover_off"
                    android:textOn="@string/discover_on"/>

            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/advertiseToggleButton"
                    android:layout_weight="1"
                    android:onClick="advertiseToggleListener"
                    android:textOff="@string/advertise_off"
                    android:textOn="@string/advertise_on"/>
        </LinearLayout>
        <Spinner
                android:text="@string/selectModel"
                android:id="@+id/select_model"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:layout_weight="1"
                    android:onClick="downloadModel"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loadModel"
                    android:layout_weight="1"
                    android:onClick="loadModel"/>
        </LinearLayout>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chooseImage"
                android:text="@string/chooseImage"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>